3.2.5, java 21, virtual threads enabled, add mvnw