@@ -180,7 +180,7 @@ class DefaultWebAuthnRegistrationPageGeneratingFilterTests {
 		assertThat(body).contains("await fetch('/webauthn/register', {");
 		assertThat(body).contains("await fetch('/webauthn/register/options', {");
 		assertThat(body).contains("window.location.href = '/webauthn/register?success'");
-		assertThat(body).contains(String.format("action=\"/webauthn/register/%s\"", credential.getCredentialId().getBytesAsBase64()));
+		assertThat(body).contains("action=\"/webauthn/register/%s\"".formatted(credential.getCredentialId().getBytesAsBase64()));
 	}
 
 	@Test
@@ -197,7 +197,7 @@ class DefaultWebAuthnRegistrationPageGeneratingFilterTests {
 		assertThat(body).contains("await fetch('/foo/webauthn/register', {");
 		assertThat(body).contains("await fetch('/foo/webauthn/register/options', {");
 		assertThat(body).contains("window.location.href = '/foo/webauthn/register?success'");
-		assertThat(body).contains(String.format("action=\"/foo/webauthn/register/%s\"", credential.getCredentialId().getBytesAsBase64()));
+		assertThat(body).contains("action=\"/foo/webauthn/register/%s\"".formatted(credential.getCredentialId().getBytesAsBase64()));
 	}
 
 	private String bodyAsString(RequestBuilder request) throws Exception {
